# Epic-KFC

./: .cursorrules  .gitignore  AGENTS.md  README.md
blockchain/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
blockchain/contracts/: MessageFidelity.sol
blockchain/fidelity-ui/: MessageFidelity.abi.json  app.js  deployment.json  index.html  styles.css
blockchain/scripts/: anchor.ts  deploy.ts
blockchain/test/: MessageFidelity.test.ts
client/: .gitignore  CMakeLists.txt  README.md  main.cpp
client/src/: main.cpp
client/src/app/: ClientController.cpp  ClientController.h  CommandRouter.cpp  CommandRouter.h  EventBus.cpp  EventBus.h  SlashCommandParser.cpp  SlashCommandParser.h  StartupConfig.cpp  StartupConfig.h
client/src/console/: ConsoleInputWorker.cpp  ConsoleInputWorker.h  ConsolePresenter.cpp  ConsolePresenter.h
client/src/crypto/: MockCryptoProvider.cpp  MockCryptoProvider.h  NativeSignalCryptoProvider.cpp  NativeSignalCryptoProvider.h
client/src/domain/: Models.cpp  Models.h
client/src/gateways/: Gateways.cpp  Gateways.h  HttpGateways.cpp  HttpGateways.h
client/src/services/: Services.cpp  Services.h
client/src/storage/: JsonLocalStore.cpp  JsonLocalStore.h
client/src/support/: ClientConstants.h  Result.h
client/tests/: client_tests.cpp
cryptography/: .gitignore  package-lock.json  package.json  tsconfig.json
cryptography/scripts/: demo-signal.js  e2e-with-backend.js  smoke-signal.js
cryptography/src/: bufferUtils.ts  cryptoEngine.ts  ed25519.ts  index.ts  storageSchema.ts  wireFormat.ts  x25519.ts
cryptography/src/signal/: doubleRatchet.ts  index.ts  libsignalDevice.ts  libsignalMessaging.ts  nodeSetup.ts  preKeys.ts  signalKdf.ts  signalProtocolStore.ts  signalSession.ts  tofu.ts  x3dh.ts
docs/: README.md  ai-cpp-client-notes.md  architecture.md  backend-crypto-integration.md  cryptography.md  database.md  integration.md  interview-prep.md  threat-model.md
server/backend/: .env.example  .gitignore  README.md  alembic.ini  requirements.txt  test_config.py
server/backend/alembic/: env.py
server/backend/alembic/versions/: 20260527_0001_create_initial_secure_messaging_schema.py  20260528_0002_add_message_visibility_fields.py  (+1 more)
server/backend/app/: main.py
server/backend/app/api/: deps.py
server/backend/deploy/: ensure-postgres-restart.sh  epic-messaging-api.service  install-api-service.sh
server/backend/scripts/: check_db_connection.py
server/backend/tests/: conftest.py
server/docs/architecture/: network_architecture.md
server/docs/security/: penetration_testing_plan.md  security_test_results.md  threat_model.md  vulnerability_report_draft.md
(+72 files in other folders)
